primitives/api/test/tests/ui/type_reference_in_impl_runtime_apis_call.stderr
error[E0053]: method `test` has an incompatible type for trait
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:19:17
   |
19 |         fn test(data: &u64) {
   |                       ^^^^
   |                       |
   |                       expected `u64`, found `&u64`
   |                       help: change the parameter type to match the trait: `u64`
   |
note: type in trait
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:13:17
   |
13 |         fn test(data: u64);
   |                       ^^^
   = note: expected fn pointer `fn(u64)`
              found fn pointer `fn(&u64)`

error[E0308]: mismatched types
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:19:11
   |
19 |         fn test(data: &u64) {
   |                 ^^^^^^^ expected `u64`, found `&u64`
   |
help: consider removing the borrow
   |
19 -         fn test(data: &u64) {
19 +         fn test(data: &u64) {
   |
